<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ICS_HC_Offline</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Instituto de Ciencias Sostenibles</string>
    <string name="nav_header_subtitle">Hoja Consulta</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_enfermeria">Enfermeria</string>
    <string name="menu_consulta">Consulta</string>
    <string name="menu_expediente">Expediente</string>
    <string name="menu_subir_datos">Subir datos</string>
    <string name="title_pantalla_inicio">Inicio</string>
    <string name="title_titulopreclinicos">ENFERMERIA</string>
    <string name="tilte_hoja_consulta">Hoja de Consulta</string>
    <string name="tltle_emergencia_carga_hoja_consulta">CARGAR HOJA DE CONSULTA</string>
    <string name="title_activity_hoja_consulta">HojaConsulta</string>
    <string name="title_activity_inicio_consulta">inicio_consulta</string>
    <string name="title_tab_sintomas">SINTOMAS</string>
    <string name="title_tab_examenes">EXAMENES</string>
    <string name="title_tab_diagnostico">DIAGNOSTICO</string>
    <string name="title_tab_diagnostico_consulta">CONSULTA</string>
    <string name="title_tab_cierre">CIERRE</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_obteniendo">Obteniendo...</string>
    <string name="tittle_enviando">Enviando...</string>
    <string name="tittle_cancelando">Cancelando...</string>
    <string name="tittle_actualizando">Actualizando...</string>
    <string name="title_limpiando">Limpiando...</string>
    <string name="title_date_picker">Seleccione la fecha</string>
    <string name="title_examenes_resultados">RESULTADOS</string>
    <string name="tilte_malaria_resultados">RESULTADO MALARIA (Gota Gruesa)</string>
    <string name="title_periferico_resultado">RESULTADO EXTENDIDO PERIFERICO</string>
    <string name="title_egh_resultado">RESULTADO EGH</string>
    <string name="title_ego_resultado">RESULTADO EGO</string>
    <string name="title_estudio_sostenible">Instituto de Ciencias Sostenibles</string>
    <string name="title_procesando">Procesando...</string>
    <string name="label_menu">MENU</string>
    <string name="label_codigo">Código:</string>
    <string name="label_fecha">Fecha:</string>
    <string name="label_hora">Hora:</string>
    <string name="label_expediente">Expediente:</string>
    <string name="label_nombre_apellido">Nombre y Apellidos:</string>
    <string name="label_peso">Peso(kg):</string>
    <string name="label_talla">Talla(cm):</string>
    <string name="label_edad">Edad:</string>
    <string name="label_sexo">Sexo:</string>
    <string name="label_pa">P/A:</string>
    <string name="label_pas">PAS:</string>
    <string name="label_pad">PAD:</string>
    <string name="label_fcia_resp">Fcia Resp:</string>
    <string name="label_fcia_card">Fcia Card:</string>
    <string name="label_temp">Temp(ºC):</string>
    <string name="label_num_hoja_consulta">Nº Hoja Consulta:</string>
    <string name="label_num_orden_llegada">Nº Orden de Llegada:</string>
    <string name="label_medico_opcional">Médico (opcional):</string>
    <string name="label_estado_nturicional">Estado Nutricional:</string>
    <string name="label_medico">Médico</string>
    <string name="label_separador">-</string>
    <string name="label_codigo_expediente">Código del Participante:</string>
    <string name="label_nombre_paciente">Nombre Paciente:</string>
    <string name="label_busqueda">Busqueda</string>
    <string name="label_Recargar">Recargar</string>
    <string name="label_emergencia">EMERGENCIA</string>
    <string name="label_bienvendio">Bienvenido</string>
    <string name="label_estudio_participante">Estudios del Participante:</string>
    <string name="label_lugar_atencion">Lugar de Atención:</string>
    <string name="label_cssfv">CSSFV</string>
    <string name="label_terreno">Terreno</string>
    <string name="label_consulta">Consulta:</string>
    <string name="label_inicial">Inicial</string>
    <string name="label_seguimiento">Seguimiento</string>
    <string name="label_seguimiento_influenza">Seguimiento Influenza</string>
    <string name="label_seguimiento_zika">Seguimiento Casos A, B y D</string>
    <string name="label_vigilancia_integrada">Vigilancia Integrada IRAG / ETI</string>
    <string name="label_convaleciente">Convaleciente</string>
    <string name="label_seguimiento_chick">Seguimiento CHICK:</string>
    <string name="label_seguimiento_chick_1">1</string>
    <string name="label_seguimiento_chick_2">2</string>
    <string name="label_seguimiento_chick_3">3</string>
    <string name="label_seguimiento_chick_4">4</string>
    <string name="label_seguimiento_chick_5">5</string>
    <string name="label_turno">Turno:</string>
    <string name="label_turno_regular">Regular</string>
    <string name="label_turno_noche">Noche</string>
    <string name="label_turno_fin_semana">Fin Semana</string>
    <string name="label_temp_med_c">Temp. Med (°C):</string>
    <string name="label_fis">FIS:</string>
    <string name="label_fif">FIF:</string>
    <string name="label_ultimo_dia_fiebre">Ultimo Día Fiebre:</string>
    <string name="label_am">AM</string>
    <string name="label_pm">PM</string>
    <string name="label_ultima_dosis_ant">Ultima Dosis Antipirético</string>
    <string name="label_sintoma">Sintoma</string>
    <string name="label_descripcion">Descripcion</string>
    <string name="label_s">S</string>
    <string name="label_n">N</string>
    <string name="label_d">D</string>
    <string name="label_no_aplica">NA</string>
    <string name="label_fiebre">Fiebre</string>
    <string name="label_astenia">Astenia</string>
    <string name="label_anormalmente_somnoliento">Anormalmente Somnoliento</string>
    <string name="label_mal_estado_general">Mal Estado General</string>
    <string name="label_perdida_de_la_cons">Pérdida de la consciencia</string>
    <string name="label_inquieto_irritable">Inquieto, Irritable</string>
    <string name="label_convulsiones">Convulsiones</string>
    <string name="label_hipotermia">Hipotermia</string>
    <string name="label_letargia">Letargia</string>
    <string name="label_poco_apetito">Poco apetito</string>
    <string name="label_nausea">Náusea</string>
    <string name="label_dificulta_alimentarse">Dificultad para alimentarse</string>
    <string name="label_vomito_ultima_12_horas">Vómito # últimas 12 horas</string>
    <string name="label_diarrea">Diarrea</string>
    <string name="label_diarrea_sangre">Diarrea con Sangre</string>
    <string name="label_estrenimiento">Estreñimiento</string>
    <string name="label_dolor_abdominal_intermitente">Dolor abdominal intermitente</string>
    <string name="label_dolor_abdominal_continuo">Dolor abdominal continuo</string>
    <string name="label_epigastralgia">Epigastralgia</string>
    <string name="label_intolerancia_via_oral">Intolerancia a al vía oral</string>
    <string name="label_distension_abdominal">Distensión abdominal</string>
    <string name="label_hepatomegalia_cm">Hepatomegalia (cm)</string>
    <string name="label_artralgia">Artralgia</string>
    <string name="label_mialgia">Mialgia</string>
    <string name="label_lumbalgia">Lumbalgia</string>
    <string name="label_dolor_cuello">Dolor en cuello</string>
    <string name="label_tenosinovitis">Tenosinovitis</string>
    <string name="label_artralgia_proximal">Artralgia Proximal</string>
    <string name="label_artralgia_distal">Artralgia Distal</string>
    <string name="label_conjutivitis">Conjutivitis</string>
    <string name="label_edema_articular_munieca">Edema Articular en Muñecas</string>
    <string name="label_edema_articular_codo">Edema Articular en Codos</string>
    <string name="label_edema_articular_hombros">Edema Articular en Hombros</string>
    <string name="label_edema_articular_rodillas">Edema Articular en Rodillas</string>
    <string name="label_edema_articular_tobillos">Edema Articular en Tobillos</string>
    <string name="label_cafalea">Cefalea</string>
    <string name="label_rigidez_cuello">Rigidez de Cuello</string>
    <string name="label_inyeccion_conjutival">Inyección conjuntival</string>
    <string name="label_hemorragia_sunconjutival">Hemorragia Suconjutival</string>
    <string name="label_dolor_retrooculuar">Dolor Retroocular</string>
    <string name="label_fontanela_abombada">Fontanela Abombada</string>
    <string name="label_ictericia_conuntival">Ictericia Conjuntival</string>
    <string name="label_lengua_mucosas_secas">Lengua y mucosas secas</string>
    <string name="label_pliegue_cutaneo">Pliegue cutáneo</string>
    <string name="label_orina_reducida">Orina reducida</string>
    <string name="label_bebe_avido_sed">Bebe ávido, con sed</string>
    <string name="label_ojos_hundidos">Ojos hundidos</string>
    <string name="label_fontanela_hundida">Fontanela hundida</string>
    <string name="label_rahs_localizado">Rash localizado</string>
    <string name="label_rahs_generalizado">Rash generalizado</string>
    <string name="label_rash_eritematoso">Rash Eritematoso</string>
    <string name="label_rash_macular">Rash macular</string>
    <string name="label_rash_popular">Rash papular</string>
    <string name="label_rash_moteada">Rash moteada</string>
    <string name="label_robor_facial">Rubor facial</string>
    <string name="label_equimosis">Equimosis</string>
    <string name="label_cianosis_central">Cianosis central</string>
    <string name="label_ictericia">Ictericia</string>
    <string name="label_eritema">Eritema</string>
    <string name="label_dolor_garganta">Dolor de garganta</string>
    <string name="label_adenopatias_cervicales">Adenopatías cervicales</string>
    <string name="label_exudado">Exudado</string>
    <string name="label_petequias_mucosa">Petequias en mucosa</string>
    <string name="label_sintomas_urinarios">Sintomas urinarios</string>
    <string name="label_leucocituria_10_campo">Leucocituria >=10 x campo</string>
    <string name="label_nitritos">Nitritos</string>
    <string name="label_eritrocitos_6_campo">Eritrocitos >=6 x campo</string>
    <string name="label_bilirrubinuria">Bilirrubinuria</string>
    <string name="label_obeso">Obeso</string>
    <string name="label_sobrepeso">Sobrepeso</string>
    <string name="label_sospecha_problema">Sospecha de Problema</string>
    <string name="label_normal">Normal</string>
    <string name="label_bajo_peso">Bajo Peso</string>
    <string name="label_bajo_peso_severo">Bajo Peso Severo</string>
    <string name="label_tos">Tos</string>
    <string name="label_rinorrea">Rinorrea</string>
    <string name="label_congestion_nasal">Congestión Nasal</string>
    <string name="label_secrecion_nasal">Secreción Nasal</string>
    <string name="label_si">SI</string>
    <string name="label_no">NO</string>
    <string name="label_cambio_categoria">Cambio Categoría</string>
    <string name="boton_diagnostico_HistoriaExamenFisico">Historial y Examen Físico</string>
    <string name="boton_diagnostico_Tratamiento">Tratamiento y Planes</string>
    <string name="boton_diagnostico_diagnostico">Diagnostico</string>
    <string name="boton_diagnostico_proximacita">Próxima cita</string>
    <string name="boton_salir">Salir</string>
    <string name="boton_agregar">Agregar</string>
    <string name="user">Usuario:</string>
    <string name="add_consulta">Agregar Consulta</string>
    <string name="datos_preclinicos">Datos preclinicos</string>
    <string name="upload">Subir Datos</string>
</resources>