<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/menu_home">

        </item>
        <item
            android:id="@+id/nav_enfermeria"
            android:icon="@mipmap/ic_enfermera"
            android:title="@string/menu_enfermeria" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@mipmap/ic_consulta"
            android:title="@string/menu_consulta" />
        <item
            android:id="@+id/nav_expediente"
            android:icon="@mipmap/ic_expediente"
            android:title="@string/menu_expediente" />
    </group>
</menu>