<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="25dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_launcher"
        android:background="@drawable/side_nav_bar"
        android:contentDescription="@string/nav_header_desc"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:text="@string/nav_header_title"
        android:background="@drawable/side_nav_bar"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/teal_700"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textStyle="bold"
        android:background="@drawable/side_nav_bar"
        android:textSize="14sp"
        android:textColor="@color/teal_700"
        android:id="@+id/textView" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:background="@drawable/side_nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textStyle="bold"
            android:background="@drawable/side_nav_bar"
            android:textSize="12sp"
            android:textColor="@color/teal_700"
            android:id="@+id/user" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:background="@drawable/side_nav_bar"
            android:textSize="12sp"
            android:textColor="@color/teal_700"
            android:id="@+id/userName" />
    </LinearLayout>
</LinearLayout>