<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:focusable="true" android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/txtvTituloDiagnostico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_tab_diagnostico_consulta"
            android:visibility="invisible"
            android:textAppearance="@style/TextoTituloEstilo" />

        <ImageButton
            android:id="@+id/ibtVisorDiagnostico"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@mipmap/pdf" />
        <TextView
            android:id="@+id/txtvNombreApellido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvTituloDiagnostico"
            android:layout_marginStart="20dp"
            android:text="@string/label_nombre_apellido"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxNombrePaciente"
            style="@style/EditTextEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvNombreApellido"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtvEstudiosParticipante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvNombreApellido"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/label_estudio_participante"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxEstudioParticipanteD"
            style="@style/EditTextEstilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvEstudiosParticipante"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvCodigoSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxEstudioParticipanteD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_codigo"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxCodigoSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvCodigoSintomaD"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvFechaSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxEstudioParticipanteD"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxCodigoSintomaD"
            android:text="@string/label_fecha"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtFechaSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvFechaSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/edtxCodigoSintomaD"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvHoraSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxEstudioParticipanteD"
            android:layout_marginStart="11dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxtFechaSintomaD"
            android:text="@string/label_hora"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtHoraSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvHoraSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/edtxtFechaSintomaD"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:paddingStart="4dp"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="17sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtvExpendienteSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxCodigoSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_expediente"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtExpedienteSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvExpendienteSintomaD"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="7dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvEdadSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxtFechaSintomaD"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxtExpedienteSintomaD"
            android:text="@string/label_edad"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtEdadSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvEdadSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/edtxtExpedienteSintomaD"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvSexoSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxtHoraSintomaD"
            android:layout_marginStart="23dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxtEdadSintomaD"
            android:text="@string/label_sexo"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtSexoSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvSexoSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_toEndOf="@+id/edtxtEdadSintomaD"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvPesoKgSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxtExpedienteSintomaD"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/label_peso"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtPesoKgSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvPesoKgSintomaD"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvTallaCmSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxtEdadSintomaD"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxtPesoKgSintomaD"
            android:text="@string/label_talla"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtTallaCmSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvTallaCmSintomaD"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_toEndOf="@+id/edtxtPesoKgSintomaD"
            android:ems="10"
            android:enabled="false"
            android:inputType="date"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtvTempCSintomaD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtxtSexoSintomaD"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edtxtTallaCmSintomaD"
            android:text="@string/label_temp"
            android:textColor="@android:color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtxtTempCSintomaD"
            style="@style/EditTextEstilo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtvTempCSintomaD"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="7dp"
            android:layout_toEndOf="@+id/edtxtTallaCmSintomaD"
            android:ems="10"
            android:enabled="false"
            android:textColor="@color/color_texto_deshabilitado"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btndianosticoHistExamenFisico"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignTop="@+id/edtxtTempCSintomaD"
            android:layout_marginTop="40dp"
            android:drawableEnd="@mipmap/ic_add"
            android:text="@string/boton_diagnostico_HistoriaExamenFisico" />

        <Button
            android:id="@+id/btndianosticotratamiento"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignTop="@+id/btndianosticoHistExamenFisico"
            android:layout_marginTop="60dp"
            android:drawableEnd="@mipmap/ic_add"
            android:text="@string/boton_diagnostico_Tratamiento" />

        <Button
            android:id="@+id/btndianosticodiag"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignTop="@+id/btndianosticotratamiento"
            android:layout_marginTop="60dp"
            android:drawableEnd="@mipmap/ic_add"
            android:text="@string/boton_diagnostico_diagnostico" />

        <Button
            android:id="@+id/btndianosticoproxcita"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignTop="@+id/btndianosticodiag"
            android:layout_marginTop="60dp"
            android:drawableEnd="@mipmap/ic_add"
            android:text="@string/boton_diagnostico_proximacita" />
    </RelativeLayout>
</ScrollView>